--- a/app/src/main/res/layout/fragment_create_appointment.xml
+++ b/app/src/main/res/layout/fragment_create_appointment.xml
@@ -162,20 +162,35 @@
                                 android:layout_centerVertical="true"
                                 android:src="@drawable/default_avatar"
                                 android:layout_marginBottom="4dp" />
-
+                    <LinearLayout android:layout_width="wrap_content"
+                                  android:orientation="vertical"
+                                  android:layout_marginLeft="10dp"
+                                  android:layout_centerVertical="true"
+                                  android:gravity="left"
+                                  android:layout_toRightOf="@+id/img_avatar_schedule"
+                                  android:layout_height="wrap_content">
                         <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Click here if meeting with a client"
+                                android:textSize="13sp"
+                                android:textAlignment="center"
+                                android:gravity="left"
+                                android:id="@+id/client_name"
+                                android:textColor="@color/schedule_title_bg_color"
+                                />
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text=""
                                 android:textSize="11sp"
                                 android:textAlignment="center"
                                 android:gravity="left"
-                                android:layout_centerVertical="true"
-                                android:id="@+id/txt_creative_co_op"
-                                android:layout_toRightOf="@+id/img_avatar_schedule"
-                                android:textColor="@color/schedule_title_bg_color"
-                                android:layout_marginBottom="4dp"
-                                android:layout_gravity="center" />
+                                android:id="@+id/client_company"
+                                android:textColor="@color/grey"
+                                />
+                    </LinearLayout>
+
                         <ImageView android:layout_width="@dimen/action_bar_icon_height"
                                    android:layout_height="@dimen/action_bar_icon_height"
                                    android:padding="@dimen/action_bar_icon_padding"
@@ -232,7 +247,7 @@
                                 android:id="@+id/date"
                                 android:enabled="false"
                                 android:textColor="@color/schedule_title_bg_color"
-                                android:textSize="16sp"/>
+                                android:textSize="14sp"/>
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -288,9 +303,8 @@
                                 android:layout_height="wrap_content"
                                 android:id="@+id/time"
                                 android:paddingTop="4dp"
-                                android:textStyle="bold"
                                 android:textColor="@color/schedule_title_bg_color"
-                                android:textSize="16sp" />
+                                android:textSize="14sp" />
                         </LinearLayout>
 
                     </RelativeLayout>
@@ -333,16 +347,19 @@
                             <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:id="@+id/location"
+                                    android:id="@+id/txt_location"
                                     android:paddingTop="4dp"
-                                    android:textStyle="bold"
                                     android:textColor="@color/schedule_title_bg_color"
-                                    android:textSize="16sp" />
+                                    android:textSize="14sp" />
                         </LinearLayout>
 
                     </RelativeLayout>
 
-
+                    <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="0.1dp"
+                            android:layout_marginBottom="5dp"
+                            android:background="@android:color/darker_gray" />
                     <RelativeLayout
                         android:id="@+id/layout_reminder"
                         android:layout_width="match_parent"
