--- a/app/src/main/res/layout/fragment_schedule_clients_suggestions.xml
+++ b/app/src/main/res/layout/fragment_schedule_clients_suggestions.xml
@@ -8,16 +8,18 @@
     <RelativeLayout
         android:id="@+id/top_layout"
         android:layout_width="fill_parent"
-        android:layout_height="54dp"
+        android:layout_height="@dimen/action_bar_height"
         android:background="@color/schedule_title_bg_color">
 
         <ImageView
-            android:id="@+id/img_activity"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
+            android:id="@+id/back_button"
+            android:layout_width="@dimen/action_bar_icon_height"
+            android:layout_height="@dimen/action_bar_icon_height"
+            android:padding="@dimen/action_bar_icon_padding"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/sort_icon_blue" />
+            android:onClick="goBack"
+            android:src="@drawable/btn_back_arrow" />
 
         <TextView
             android:id="@+id/txt_title"
@@ -34,11 +36,12 @@
         <ImageView
             android:id="@+id/img_search"
             android:layout_width="30dp"
+            android:visibility="gone"
             android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
-            android:src="@mipmap/search_blue"
+            android:src="@drawable/search_blue"
             android:textColor="@color/button_bg" />
     </RelativeLayout>
 
@@ -71,7 +74,7 @@
                     android:layout_width="25dp"
                     android:layout_height="30dp"
                     android:layout_centerVertical="true"
-                    android:src="@mipmap/checkmark_green" />
+                    android:src="@drawable/checkmark_green" />
 
                 <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/pic_client"
@@ -80,7 +83,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="7dp"
                     android:layout_toRightOf="@+id/tick"
-                    android:src="@mipmap/default_avatar" />
+                    android:src="@drawable/default_avatar" />
 
                 <TextView
                     android:id="@+id/company_name"
@@ -107,7 +110,14 @@
                     android:textColor="@color/button_bg"
                     android:textSize="14sp" />
 
+
             </RelativeLayout>
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -159,7 +169,10 @@
                 android:layout_height="0.3dp"
                 android:layout_marginTop="15dp"
                 android:background="@android:color/darker_gray" />
-
+<LinearLayout android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:visibility="invisible"
+android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -177,6 +190,7 @@
                 android:id="@+id/should_visit"
                 android:orientation="vertical">
             </LinearLayout>
+</LinearLayout>
 
 
             <!--<ListView-->
