--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/light_gray" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,5 +40,6 @@
             android:textSize="14sp" />
 
     </LinearLayout>
+
 
 </LinearLayout>
