--- a/app/src/main/res/layout/dialog_event_schedule_options.xml
+++ b/app/src/main/res/layout/dialog_event_schedule_options.xml
@@ -53,7 +53,7 @@
                 android:background="@android:color/darker_gray" />
 
             <TextView
-                android:id="@+id/complete"
+                android:id="@+id/mark_as_completed"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
                 android:background="@android:color/darker_gray" />
 
             <TextView
-                android:id="@+id/cancel"
+                android:id="@+id/cancel_appointment"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_height="wrap_content"
