--- a/app/src/main/res/layout/schedule_map_info_window.xml
+++ b/app/src/main/res/layout/schedule_map_info_window.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/curve_white_background_with_stroke">
-
+    android:layout_width="wrap_content"
+                android:padding="20dp"
+                android:background="@android:color/transparent"
+    android:layout_height="wrap_content">
+    <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/curve_white_background_with_stroke">
     <LinearLayout
         android:id="@+id/img_layout"
         android:layout_width="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="50dp"
+            android:layout_margin="5dp"
             android:layout_height="50dp"
+
             android:scaleType="fitXY"
-            android:src="@mipmap/default_avatar" />
+            android:src="@drawable/default_avatar" />
     </LinearLayout>
 
     <LinearLayout
@@ -35,31 +42,42 @@
             android:text="Apple Corporation"
             android:textColor="@color/schedule_title_bg_color"
             android:textStyle="bold"
-            android:textSize="12sp" />
+            android:textSize="13sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingTop="5dp">
+            android:paddingBottom="0dp"
+            android:paddingTop="0dp">
 
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="15dp"
                 android:layout_marginRight="4dp"
-                android:src="@mipmap/icon_pin_grey" />
+                android:alpha="0.5"
+                android:visibility="gone"
+                android:src="@drawable/icon_pin_grey" />
 
             <TextView
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="3286 Iva Route Suite 123"
-                android:textColor="@color/schedule_title_bg_color"
+                android:text=""
+                android:textColor="@color/light_gray2"
                 android:textSize="12sp" />
 
         </LinearLayout>
+        <TextView
+                android:id="@+id/distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="1.3miles"
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/schedule_title_bg_color"
+                android:textSize="11sp" />
 
     </LinearLayout>
 
@@ -72,21 +90,15 @@
         android:paddingRight="10dp"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/distance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="1.3miles"
-            android:textColor="@color/schedule_title_bg_color"
-            android:textSize="11sp" />
+
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:src="@mipmap/right_arrow" />
+            android:src="@drawable/right_arrow" />
     </LinearLayout>
 
 
 </RelativeLayout>
+    </RelativeLayout>
