--- a/app/src/main/res/layout/fragment_line_create_first_goal.xml
+++ b/app/src/main/res/layout/fragment_line_create_first_goal.xml
@@ -24,7 +24,7 @@
 
 
             <TextView
-                android:id="@+id/txt_add_client"
+                android:id="@+id/create_goal"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_marginLeft="20dp"
