--- a/app/src/main/res/layout/activity_line_add_goal.xml
+++ b/app/src/main/res/layout/activity_line_add_goal.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <RelativeLayout
         android:id="@+id/top_layout"
@@ -67,7 +68,8 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/top">
+        android:layout_below="@id/top"
+        android:layout_weight="0.40">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -95,7 +97,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/transparent"
-                    android:text=""
+                    android:text="test name"
                     android:textColor="@color/grey" />
 
                 <View
@@ -122,7 +124,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/transparent"
-                    android:text=""
+                    android:text="2000"
                     android:textColor="@color/grey" />
 
                 <View
@@ -179,22 +181,20 @@
 
                 <EditText
                     android:id="@+id/note"
+                    android:inputType="textMultiLine"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/transparent"
-                    android:text=""
+                    android:text="this is a test goal"
                     android:textColor="@color/grey" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="0.1dp"
+                    android:layout_height="wrap_content"
                     android:background="@color/light_gray" />
             </LinearLayout>
-
-
         </LinearLayout>
 
     </ScrollView>
-
 
 </LinearLayout>
