--- a/app/src/main/res/layout/fragment_view_client.xml
+++ b/app/src/main/res/layout/fragment_view_client.xml
@@ -590,7 +590,7 @@
                                     android:id="@+id/lines_territory_arrow"
                                     android:layout_width="20dp"
                                     android:layout_height="20dp"
-                                    android:src="@mipmap/right_arrow" />
+                                    android:src="@drawable/right_arrow" />
 
                             </LinearLayout>
 
