--- a/app/src/main/res/layout/activity_line_goal_view.xml
+++ b/app/src/main/res/layout/activity_line_goal_view.xml
@@ -122,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="Expires in 4 days"
+                android:text=""
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -207,6 +207,7 @@
                         android:textSize="17sp" />
 
                     <TextView
+                        android:id="@+id/lines_client_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="3 lines, 45 clients"
