--- a/app/src/main/res/layout/line_past_goal_fragment.xml
+++ b/app/src/main/res/layout/line_past_goal_fragment.xml
@@ -5,12 +5,11 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-   <TextView
+   <ListView
+       android:id="@+id/list"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:text="Hello"
-       android:textSize="17sp"
-       android:gravity="center_horizontal|center_vertical"
-       android:textColor="@color/button_bg"/>
+       android:layout_height="wrap_content"
+       android:listSelector="@android:color/transparent"
+       android:scrollbars="none" />
 
 </LinearLayout>
