--- a/app/src/main/res/layout/activity_line_add.xml
+++ b/app/src/main/res/layout/activity_line_add.xml
@@ -58,15 +58,21 @@
             style="@style/FieldLabels"
             />
 
-        <com.tied.android.tiedapp.customs.ui.MyEditText
+        <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
-            android:hint="Note ..."
-            android:text="Hello"
+            android:hint="Enter the name of the line"
+            android:text=""
+            android:padding="5dp"
+            android:textColorHint="@color/light_gray"
+            style="@style/EditTextStyle"
             android:textColor="@color/grey"
             />
+        <View android:layout_width="match_parent"
+              android:layout_height="0.1dp"
+              android:background="@color/light_gray" />
     </LinearLayout>
 
     <LinearLayout
@@ -81,19 +87,26 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ADD DESCRIPTION"
+            android:text="DESCRIPTION"
             style="@style/FieldLabels"
             />
 
-        <com.tied.android.tiedapp.customs.ui.MyEditText
+        <EditText
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@android:color/transparent"
-            android:hint="Note ..."
-            android:text="Its me"
+            android:hint="Describe this line"
+            style="@style/EditTextStyle"
+            android:textColorHint="@color/light_gray"
+            android:padding="5dp"
+
+            android:text=""
             android:textColor="@color/grey"
             />
+        <View android:layout_width="match_parent"
+              android:layout_height="0.1dp"
+              android:background="@color/light_gray" />
     </LinearLayout>
 
     <TextView
@@ -101,14 +114,14 @@
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/curve_blue_background"
         android:gravity="center_vertical"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
-        android:text="ADD LINE"
+        android:text="ADD LINE    >"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textStyle="bold" />
 
 
