--- a/app/src/main/res/layout/activity_line_view.xml
+++ b/app/src/main/res/layout/activity_line_view.xml
@@ -10,7 +10,7 @@
         android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_layout"
+        android:background="#064c78"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -27,28 +27,23 @@
                 android:layout_marginTop="0dp"
                 android:text="Line"
                 android:textColor="@color/white"
-                android:textSize="17sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/back_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
+
 
                 <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="@dimen/action_bar_icon_height"
+                    android:layout_height="@dimen/action_bar_icon_height"
+                    android:padding="@dimen/action_bar_icon_padding"
                     android:layout_gravity="center"
                     android:layout_marginLeft="0dp"
+                    android:layout_alignParentLeft="true"
                     android:onClick="onClick"
-                    android:src="@drawable/btn_close" />
+                    android:id="@+id/back_button"
+                    android:src="@drawable/btn_back_arrow" />
 
-            </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/ok_but"
@@ -79,40 +74,44 @@
                 android:layout_height="wrap_content"
                 android:text="Line name Here"
                 android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="22sp"
+                android:textStyle="normal" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/string"
                 android:gravity="center"
+                android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:paddingRight="10dp"
+                    android:paddingRight="5dp"
                     android:text="$"
+                    android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="22sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="25,191,000"
+                    android:text="0.00"
+                    android:textStyle="bold"
                     android:textColor="@color/white"
-                    android:textSize="30sp" />
+                    android:textSize="22sp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/string"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="0dp"
                 android:text="Overall Sales"
-                android:textSize="15sp"
+                android:textSize="13sp"
+                android:alpha="0.5"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -127,6 +126,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingTop="10dp"
             android:paddingBottom="30dp">
 
             <RelativeLayout
@@ -134,9 +134,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:paddingBottom="10dp"
+                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingTop="10dp">
+                android:paddingTop="15dp">
 
                 <ImageView
                     android:id="@+id/icon_dollar"
@@ -144,16 +144,28 @@
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
                     android:src="@drawable/dollar_purple" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@+id/icon_dollar"
-                    android:text="Revenue"
-                    android:textColor="@color/schedule_title_bg_color"
-                    android:textSize="16sp" />
+                <LinearLayout android:layout_width="wrap_content"
+                              android:layout_toRightOf="@+id/icon_dollar"
+                              android:orientation="vertical"
+                              android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+                        android:text="Revenue"
+                        android:textColor="@color/schedule_title_bg_color"
+                        android:textSize="16sp" />
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="$0.00"
+                            android:id="@+id/total_revenue"
+                            android:textColor="@color/light_gray2"
+                            android:textSize="11sp" />
+                </LinearLayout>
 
                 <ImageView
                     android:layout_width="20dp"
@@ -161,7 +173,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="25dp"
-                    android:src="@drawable/icon_plus" />
+                    android:src="@drawable/right_arrow" />
             </RelativeLayout>
 
             <View
@@ -174,9 +186,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:paddingBottom="10dp"
+                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingTop="10dp">
+                android:paddingTop="15dp">
 
                 <ImageView
                     android:id="@+id/icon_clients"
@@ -185,15 +197,30 @@
                     android:layout_centerVertical="true"
                     android:src="@drawable/users" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@+id/icon_clients"
-                    android:text="Clients"
-                    android:textColor="@color/schedule_title_bg_color"
-                    android:textSize="16sp" />
+                <LinearLayout android:layout_width="wrap_content"
+                              android:layout_toRightOf="@+id/icon_clients"
+                              android:orientation="vertical"
+                              android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
+
+                        android:text="Clients"
+                        android:textColor="@color/schedule_title_bg_color"
+                        android:textSize="16sp" />
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="0"
+                            android:id="@+id/num_clients"
+                            android:textColor="@color/light_gray2"
+                            android:textSize="11sp" />
+                </LinearLayout>
 
                 <ImageView
                     android:layout_width="20dp"
@@ -201,7 +228,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="25dp"
-                    android:src="@drawable/icon_plus" />
+                    android:src="@drawable/right_arrow" />
             </RelativeLayout>
 
             <View
@@ -214,9 +241,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:paddingBottom="10dp"
+                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingTop="10dp">
+                android:paddingTop="15dp">
 
                 <ImageView
                     android:id="@+id/icon_goals"
@@ -224,17 +251,29 @@
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_trophy_gray" />
+                <LinearLayout android:layout_width="wrap_content"
+                              android:layout_toRightOf="@+id/icon_goals"
+                              android:orientation="vertical"
+                              android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@+id/icon_goals"
-                    android:text="Goals"
-                    android:textColor="@color/schedule_title_bg_color"
-                    android:textSize="16sp" />
-
+                        android:text="Goals"
+                        android:textColor="@color/schedule_title_bg_color"
+                        android:textSize="16sp" />
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="0"
+                            android:id="@+id/num_goals"
+                            android:textColor="@color/light_gray2"
+                            android:textSize="11sp" />
+                </LinearLayout>
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="25dp"
@@ -254,9 +293,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:paddingBottom="10dp"
+                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingTop="10dp">
+                android:paddingTop="15dp">
 
                 <ImageView
                     android:id="@+id/icon_territory"
@@ -304,16 +343,30 @@
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_trophy_gray" />
+                <LinearLayout android:layout_width="wrap_content"
+                              android:layout_toRightOf="@+id/icon_ship"
+                              android:orientation="vertical"
+                              android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="15dp"
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
-                    android:layout_toRightOf="@+id/icon_ship"
-                    android:text="Ship From"
-                    android:textColor="@color/schedule_title_bg_color"
-                    android:textSize="16sp" />
+                        android:text="Ship From"
+                        android:textColor="@color/schedule_title_bg_color"
+                        android:textSize="16sp" />
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="15dp"
+                            android:text="Click to enter location"
+                            android:id="@+id/ship_from"
+                            android:textColor="@color/light_gray2"
+                            android:textSize="11sp" />
+
+                </LinearLayout>
 
                 <ImageView
                     android:layout_width="20dp"
@@ -334,9 +387,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:paddingBottom="10dp"
+                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingTop="10dp">
+                android:paddingTop="15dp">
 
                 <ImageView
                     android:id="@+id/icon_info"
@@ -371,8 +424,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="22dp"
-                android:background="@color/schedule_create_appointment_bg_color"
+                style="@style/SectionLayout"
+                android:layout_marginTop="0dp"
                 android:paddingLeft="20dp">
 
                 <TextView
@@ -380,10 +433,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Description"
+                    android:text="DESCRIPTION"
                     android:textColor="@color/schedule_title_bg_color"
                     android:textIsSelectable="false"
                     android:textSize="14sp"
+
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -395,7 +449,7 @@
                 android:paddingLeft="20dp"
                 android:paddingRight="15dp"
                 android:paddingTop="10dp"
-                android:text="Lorem ipsum lorem ipsum lorep inmun ghryfu yu vaety barety asahsh asas kksas ksas"
+                android:text=""
                 android:textColor="@color/schedule_title_bg_color"
                 android:textSize="13sp" />
 
