--- a/app/src/main/res/layout/revenue_lv_item.xml
+++ b/app/src/main/res/layout/revenue_lv_item.xml
@@ -6,26 +6,36 @@
               android:background="@android:color/white"
               android:paddingRight="25dp"
               android:paddingTop="5dip"
-              android:paddingBottom="5dp"
-                android:orientation="vertical">
+              android:paddingBottom="0dp"
+                android:orientation="vertical"
+            >
 
             <TextView
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sdsa"
+                    android:text=""
                     android:textColor="@color/grey"
-                    style="@style/SectionText"
+
                     />
 
             <TextView
                     android:id="@+id/value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sds"
+                    android:text=""
                     style="@style/EditTextStyle"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"/>
+    <TextView
+            android:id="@+id/date_sold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/grey"
+
+    />
+    <View  android:layout_marginTop="5dp" style="@style/SeperatorHorizontal"></View>
 
 
 </LinearLayout>
