66 to 70 rough screen design

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -194,4 +194,11 @@
         <!--<item name="android:dateTextAppearance">@style/RobotoTextViewStyle</item>-->
     <!--</style>-->
 
+    <style name="AppTheme.FullScreen">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
 </resources>
